# aistatus-python

./: .gitignore  CHANGELOG.md  README.md  gateway.example.yaml  pyproject.toml
.github/workflows/: pypi-publish.yml
aistatus/: CLAUDE.md  __init__.py  __main__.py  _defaults.py  api.py  config.py  content.py  exceptions.py  middleware.py  models.py  pricing.py  router.py  stream.py  uploader.py  usage.py  usage_storage.py
aistatus/cli/: usage.py
aistatus/gateway/: CLAUDE.md  __init__.py  __main__.py  auth.py  config.py  health.py  server.py  translate.py
aistatus/providers/: CLAUDE.md  __init__.py  anthropic_.py  base.py  compatible_.py  google_.py  openai_.py  openrouter_.py
examples/: agent_pipeline.py  basic.py  status_query.py  tier_routing.py
tests/: CLAUDE.md  test_config.py  test_config_reload.py  test_graceful_shutdown.py  test_hybrid_backend.py  test_metadata_and_dump.py  test_model_health.py  test_pricing.py  test_proxy_model_extraction.py  test_uploader.py  test_usage_endpoint.py
